remove Log4j2, Slf4j and UtilityClass annotations see #1068 (#1067)
* initial work for removing log4j2 lombok annotation

* continue removal log4j2 annotation work

* continue removal log4j2 annotation work

* continue removal log4j2,slf4j annotation work

* remove utilityclass lombok annotation

* fix some errors in the build

* misc cleanup